fix: icon and text alignments

--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -55,6 +55,7 @@
     width: 217px; 
     height: 60px; 
     text-decoration: none;
+    gap: 4px;
   }
   
   .whatsapp-icon span {
